tests/ext/valid/Subtype_Valid_5.whiley
define sr5nat as int where $ > 0

void System::main([string] args):
    x = {f:1}
    x.f = 2
    this.out.println(str(x))
    
